--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.jessi.omnibus"
-        minSdkVersion 19
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -46,4 +46,8 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     //Calender
     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
+    //Simplify
+    implementation 'com.simplify:simplify-android:3.2.3'
+    //Animation
+    implementation 'com.android.support:support-dynamic-animation:28.0.0'
 }
