--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".util.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,7 +18,7 @@
         <activity
             android:name=".ui.search.SearchActivity"
             android:label="@string/title_activity_search"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ui.busselection.BusActivity" />
         <activity android:name=".ui.seat.SeatsActivity" />
         <activity android:name=".ui.passenger.PassengerActivity" />
@@ -30,7 +31,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.route.RouteActivity"></activity>
+        <activity android:name=".ui.route.RouteActivity" />
+        <activity android:name=".ui.coupon.CouponActivity" />
+        <activity android:name=".ui.simplify.SimplifyActivity" />
+        <activity android:name=".ui.Purchased.PurchasedActivity"></activity>
     </application>
 
 </manifest>
