--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ android {
         applicationId "com.example.jessi.omnibus"
         minSdkVersion 26
         targetSdkVersion 28
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -33,7 +34,7 @@ dependencies {
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    //Recycler View
+    //Recycler iView
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     //CardView
@@ -53,6 +54,11 @@ dependencies {
 
     //RxValidator
     implementation 'com.github.phajduk:RxValidator:94fdca4ec6504985d6187080f1d9e9580703c082'
-
+    //RXJava
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+    //Espresso Junit
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+
 }
